<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/app_name"
        android:textSize="24dp" />

    <EditText
        android:id="@+id/Textbox_editable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/text_box_hint"
        android:inputType="text"
        android:text="@string/text_box" />

    <EditText
        android:id="@+id/Textbox_editable_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/text_box_hint2"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="32dp">

        <Button
            android:id="@+id/btn_Compartir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/compartir"
            android:text="@string/compartir_button" />

        <Space
            android:layout_width="14dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_EnviarSMS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/enviar"
            android:text="@string/enviar_sms" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="32dp">

        <Button
            android:id="@+id/buttonGoToSMS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ir a Activity SMS" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/buttonGoToImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ir a Activity Camara" />
    </LinearLayout>


</LinearLayout>